5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1865_1640.log
== TEST (2019-07-04 10:15:37) 
-- CODE:
from numpy import *

vet = array(eval(input("alunos por turma: ")))

cont = 0

for i in vet:
	if [i]/2 != 0:
		cont = cont + 1
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:16:26) 
-- CODE:
from numpy import *

vet = array(eval(input("alunos por turma: ")))

cont = 0

for i in vet:
	if i/2 != 0:
		cont = cont + 1
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:17:38) 
-- CODE:
from numpy import *

vet = array(eval(input("alunos por turma: ")))

cont = 0

for i in range(vet):
	if i/2 != 0:
		cont = cont + 1
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:18:10) 
-- CODE:
from numpy import *

vet = array(eval(input("alunos por turma: ")))

cont = 0

for i in range(vet):
	if i/2 != 0:
		cont = cont + 1
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:18:56) 
-- CODE:
from numpy import *

vet = array(eval(input("alunos por turma: ")))

cont = 0

for i in range(vet):
	if i/2 == 0:
		cont = cont + 1
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:20:05) 
-- CODE:
from numpy import *

vet = array(eval(input("alunos por turma: ")))
n = zeros(vet, dtype=int)
cont = 0

for i in range(vet):
	if i/2 != 0:
		cont = cont + 1
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:20:32) 
-- CODE:
from numpy import *

vet = array(eval(input("alunos por turma: ")))
n = zeros(vet, dtype=int)
cont = 0

for i in range(vet):
	if i/2 != 0:
	cont = cont + 1
	print(cont)
-- ERROR:
File "XXXX", line 9
    cont = cont + 1
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:28:11) 
-- CODE:
from numpy import *

vet = array(eval(input("alunos por turma: ")))
n = zeros(vet, dtype=int)
cont = 0

for x in vet:
	if x/2 != 0:
		cont = cont + 1
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
